istio-security/zz-deny-authpolicy.yaml
# IMPORTANT: APPLY THIS LAST

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: default-deny
 namespace: cattle-system
spec:
  {}
